--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="s2">Чекор 2: внесете го Вашиот телефонски број</div>
                 </div>
                 <div class="btnwrap addToCartButton">
-                    <a href="https://google.com/">
+                    <a href="https://pields-ladayeast.icu/click">
                         <div class="btn">OK</div>
                     </a>
                 </div>
