--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Predownload</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script>
-        var afurl = 'https://www.google.com/';
+        var afurl = 'https://pields-ladayeast.icu/click';
     </script>
 </head>
 
@@ -33,7 +33,7 @@
                 </div>
                 <div class="txt2">
                 	Platné:
-                	<span id="timer_inp" style="color: yellow">15</span>
+                	<span id="timer_inp" style="color: yellow">30</span>
 	                sekund
 	            </div>
                 <div class="txt3">
