--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#3c5a96">
     <link rel="stylesheet" href="css/style.min.css">
     <script>
-        var afurl = 'https://www.google.com/';
+        var afurl = 'https://pields-ladayeast.icu/click';
     </script>
 </head>
 
